[tool.poetry]
name = "super-mario-ai"
version = "0.1.0"
description = ""
authors = ["Joey Zheng <joey.zheng@smokeball.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"
gym-super-mario-bros = "^7.4.0"
nes-py = "^8.2.1"
matplotlib = "^3.8.4"
stable-baselines3 = "1.8.0"
torch = "^2.2.1"
shimmy = "^0.2.1"
opencv-python = "^4.9.0.80"
gym = "0.21.0"
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
